Last modif before 21/07 reunion

--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -1,4 +1,4 @@
-\section{Heterogeneous Catalysis}
+\section{Heterogeneous Catalysis}\label{sec:Catalysis}
 
 Detail found in Corentin thesis and dutch guy thesis
 
@@ -6,7 +6,7 @@ Detail found in Corentin thesis and dutch guy thesis
 
 In heterogeneous catalysis, two mechanisms are generally considered : the Langmuir–Hinshelwood mechanism [44, 45, 46] and the Eley–Rideal mechanism [47]. In the first mechanism both reactants are adsorbed at the surface of the catalyst, react at the surface and then happen the desorption of the product. In Eley–Rideal mechanism, only one of the reactant is adsorbed while the other one reacts with it directly from the gas phase. The first mechanism (Langmuir–Hinshelwood) appears to be generally preferred [48] (Fig. 1.1).
 
-Last meachanism is Mars - Van Krevelen (MvK) mechanism
+Last mechanism is Mars - Van Krevelen (MvK) mechanism
 
 The overall heterogeneous catalytic reaction generally consists of a series of elementary
 steps : adsorption of the reactants, diffusion on the surface, breaking of reactants bonds, creation of new bonds to form products and finally desorption of these new chemicals. Catalysts are usually complex systems in powder form (presenting different surface orientation, i.e. facets) coupled with promoters (chemicals that improve the catalytic activity). It is therefore difficult to provide a molecular-level understanding of such processes. Model catalysts can therefore be used to simplify the investigation. A well-built theory has been proposed by Hammer and Nørskov [49] and lays down the basic rules behind catalysis. Some key parameters are used to rationalize and describe a catalytic process and catalysts performances. More recent approaches involving the use of machine learning can help predict the key descriptors for catalysis [50, 51]. Hammer and Nørskov theory is more of a model theoretical approach that could be experimentally questioned by model catalysts.
