--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -4,6 +4,8 @@ Presentation of the MED environment ...
 
 give values for coherence lengths
 
+detail for secondary slits in maxime's thesis
+
 \subsection{Tailored for the study of materials}
 
 \subsection{The SixS beamline}
