--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,15 @@ volume = {90},
 year = {2002}
 }
 
+@article{Dupraz2022,
+   author = {Maxime Dupraz and Ni Li and Jérôme Carnis and Longfei Wu and Stéphane Labat and Corentin Chatelier and Rim Van De Poll and Jan P Hofmann and Ehud Almog and Steven J Leake and Yves Watier and Sergey Lazarev and Fabian Westermeier and Michael Sprung and Emiel J M Hensen and Olivier Thomas and Eugen Rabkin and Marie-ingrid Richard},
+   doi = {10.1038/s41467-022-30592-1},
+   journal = {Nature Communications},
+   title = {Imaging the facet surface strain state of supported multi-faceted Pt nanoparticles during reaction},
+   year = {2022},
+}
+
+
 @article{Vlieg1997,
    abstract = {The geometrical and resolution corrections are derived that occur in the measurement of the integrated intensities of surface diffraction rods for the case of a six-circle diffractometer. Since the six-circle geometry entails as special cases the five-circle and the z-axis diffractometers, the results are valid for these geometries as well. The derivations are valid for any incoming or outgoing angle of the X-ray beam, and are particularly important for measurements at large perpendicular momentum transfer. Expressions are derived for the integrated intensity from rocking scans, from stationary measurements and from reflectivity data. With all correction factors known, it is possible to derive the structure factors with a common scale factor from all these types of scans. It is expected that area detectors combined with stationary measurements will find widespread use in the surface X-ray diffraction community.},
    author = {Elias Vlieg},
@@ -693,26 +702,20 @@ title = {{Adhesion of Pt nanoparticles supported on $\gamma$-Al2O3 single crysta
 volume = {117},
 year = {2013}
 }
+
 @article{Marchesini2003,
 abstract = {A solution to the inversion problem of scattering would offer aberration-free diffraction-limited three-dimensional images without the resolution and depth-of-field limitations of lens-based tomographic systems. Powerful algorithms are increasingly being used to act as lenses to form such images. Current image reconstruction methods, however, require the knowledge of the shape of the object and the low spatial frequencies unavoidably lost in experiments. Diffractive imaging has thus previously been used to increase the resolution of images obtained by other means. Here we experimentally demonstrate an inversion method, which reconstructs the image of the object without the need for any such prior knowledge. {\textcopyright} 2003 The American Physical Society.},
-annote = {demonstrates use of HIO algo
-
-Every 20 iterations we convolve the reconstructed im- age 共the absolute value of the reconstructed wave field兲 with a Gaussian of width ? 共full width at half maximum of 2.3548?) to find the new support mask},
-archivePrefix = {arXiv},
-arxivId = {physics/0306174},
 author = {Marchesini, S. and He, H. and Chapman, N. and Hau-Riege, P. and Noy, A. and Howells, R. and Weierstall, U. and Spence, H.},
 doi = {10.1103/PhysRevB.68.140101},
-eprint = {0306174},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Marchesini et al. - 2003 - X-ray image reconstruction from a diffraction pattern alone.pdf:pdf},
 issn = {1550235X},
 journal = {Physical Review B - Condensed Matter and Materials Physics},
 number = {14},
 pages = {1--4},
-primaryClass = {physics},
 title = {{X-ray image reconstruction from a diffraction pattern alone}},
 volume = {68},
 year = {2003}
 }
+
 @article{Miao2015,
 abstract = {X-ray crystallography has been central to the development of many fields of science over the past century. It has now matured to a point that as long as good-quality crystals are available, their atomic structure can be routinely determined in three dimensions. However, many samples in physics, chemistry, materials science, nanoscience, geology, and biology are noncrystalline, and thus their three-dimensional structures are not accessible by traditional x-ray crystallography. Overcoming this hurdle has required the development of new coherent imagingmethods to harness new coherent x-ray light sources. Here we review the revolutionary advances that are transforming x-ray sources and imaging in the 21st century.},
 author = {Miao, Jianwei and Ishikawa, Tetsuya and Robinson, Ian K. and Murnane, Margaret M.},
@@ -1015,22 +1018,16 @@ year = {2017}
 }
 @article{Marchesini2007,
 abstract = {Iterative projection algorithms are successfully being used as a substitute of lenses to recombine, numerically rather than optically, light scattered by illuminated objects. Images obtained computationally allow aberration-free diffraction-limited imaging and the possibility of using radiation for which no lenses exist. The challenge of this imaging technique is transferred from the lenses to the algorithms. We evaluate these new computational "instruments" developed for the phase-retrieval problem, and discuss acceleration strategies. {\textcopyright} 2007 American Institute of Physics.},
-archivePrefix = {arXiv},
-arxivId = {physics/0603201},
 author = {Marchesini, S.},
 doi = {10.1063/1.2403783},
-eprint = {0603201},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Marchesini - 2007 - A unified evaluation of iterative projection algorithms for phase retrieval.pdf:pdf},
-issn = {00346748},
 journal = {Review of Scientific Instruments},
 number = {1},
 pages = {1--10},
-pmid = {17503899},
-primaryClass = {physics},
 title = {{A unified evaluation of iterative projection algorithms for phase retrieval}},
 volume = {78},
 year = {2007}
 }
+
 @article{Verezhak2021,
 abstract = {Strain and defects in crystalline materials are responsible for the distinct mechanical, electric, and magnetic properties of a desired material, making their study an essential task in material characterization, fabrication, and design. Existing techniques for the visualization of strain fields, such as transmission electron microscopy and diffraction, are destructive and limited to thin slices of the materials. On the other hand, nondestructive x-ray imaging methods either have a reduced resolution or are not robust enough for a broad range of applications. Here we present x-ray ptychographic topography, a method for strain imaging, and demonstrate its use on an InSb micropillar after microcompression, where the strained region is visualized with a spatial resolution of 30 nm. Thereby, x-ray ptychographic topography proves itself as a robust nondestructive approach for the imaging of strain fields within bulk crystalline specimens with a spatial resolution of a few tens of nanometers.},
 author = {Verezhak, Mariana and {Van Petegem}, Steven and Rodriguez-Fernandez, Angel and Godard, Pierre and Wakonig, Klaus and Karpov, Dmitry and Jacques, Vincent L.R. and Menzel, Andreas and Thilly, Ludovic and Diaz, Ana},
@@ -1065,7 +1062,6 @@ archivePrefix = {arXiv},
 arxivId = {physics/0509066},
 author = {Chapman, Henry N. and Barty, Anton and Marchesini, Stefano and Noy, Aleksandr and Hau-Riege, Stefan P. and Cui, Congwu and Howells, Malcolm R. and Rosen, Rachel and He, Haifeng and Spence, John C. H. and Weierstall, Uwe and Beetz, Tobias and Jacobsen, Chris and Shapiro, David},
 doi = {10.1364/josaa.23.001179},
-eprint = {0509066},
 file = {:home/david/Documents/PhD/Papers/JOSAA.23.001179.pdf:pdf},
 issn = {1084-7529},
 journal = {Journal of the Optical Society of America A},
@@ -1105,16 +1101,8 @@ title = {{Phase-retrieval stagnation problems and solutions}},
 volume = {3},
 year = {1986}
 }
-@article{Fienup1978,
-author = {Fienup, J R},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Fienup - 1978 - Reconstruction of an object from the modulus of its Fourier transform.pdf:pdf},
-journal = {Optics Letters},
-number = {1},
-pages = {27--29},
-title = {{Reconstruction of an object from the modulus of its Fourier transform}},
-volume = {3},
-year = {1978}
-}
+
+
 @article{Malgrange1992,
 author = {Malgrange, C},
 file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Malgrange - 1992 - X-RAY OPTICS FOR SYNCHROTRON RADIATION.pdf:pdf},
@@ -1736,20 +1724,42 @@ title = {{Building up strain in colloidal metal nanoparticle catalysts}},
 volume = {7},
 year = {2015}
 }
+
 @article{Grothausmann2012,
 abstract = {Characterization of facets of particles is a common problem. In this paper an algorithm is presented which allows automated quantitative 3D analysis of facets of many particles within tomographic datasets. The algorithm is based on the analysis of probability distributions of the orientations of triangle normals of mesh representations. The result consists of lists containing number of detected facets, their size, global orientation and the interplanar angles between facets for each analyzed particle. Characterization of each particle according to any of these facet properties is then possible, e.g. statistics about different crystal shapes or removal of particles that do not show significant faceting. Analyses of a 3D dataset obtained by focused ion beam (FIB) tomography of a sample containing spinel particles are presented. {\textcopyright} 2012 Elsevier B.V.},
 author = {Grothausmann, Roman and Fiechter, Sebastian and Beare, Richard and Lehmann, Ga{\"{e}}tan and Kropf, Holger and {Vinod Kumar}, Goarke Sanjeeviah and Manke, Ingo and Banhart, John},
 doi = {10.1016/j.ultramic.2012.07.024},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Grothausmann et al. - 2012 - Automated quantitative 3D analysis of faceting of particles in tomographic datasets.pdf:pdf},
 issn = {03043991},
 journal = {Ultramicroscopy},
-keywords = {Automated 3D facet analysis,Catalysis,Focused Ion Beam (FIB),Metal foams,Spinel,Tomography},
 number = {August},
 pages = {65--75},
 title = {{Automated quantitative 3D analysis of faceting of particles in tomographic datasets}},
 volume = {122},
 year = {2012}
 }
+
+@article{Cooley1965,
+  title={An algorithm for the machine calculation of complex Fourier series},
+  author={Cooley, James W and Tukey, John W},
+  journal={Mathematics of computation},
+  volume={19},
+  number={90},
+  pages={297--301},
+  year={1965}
+}
+
+
+@ARTICLE{Cochran1967,
+  author={Cochran, W.T. and Cooley, J.W. and Favin, D.L. and Helms, H.D. and Kaenel, R.A. and Lang, W.W. and Maling, G.C. and Nelson, D.E. and Rader, C.M. and Welch, P.D.},
+  journal={Proceedings of the IEEE},
+  title={What is the fast Fourier transform?},
+  year={1967},
+  volume={55},
+  number={10},
+  pages={1664-1674},
+  doi={10.1109/PROC.1967.5957}
+}
+
 @article{Cherukara2020,
 abstract = {Ptychographic imaging is a powerful means of imaging beyond the resolution limits of typical x-ray optics. Recovering images from raw ptychographic data, however, requires the solution of an inverse problem, namely, phase retrieval. Phase retrieval algorithms are computationally expensive, which precludes real-time imaging. In this work, we propose PtychoNN, an approach to solve the ptychography data inversion problem based on a deep convolutional neural network. We demonstrate how the proposed method can be used to predict real-space structure and phase at each scan point solely from the corresponding far-field diffraction data. Our results demonstrate the practical application of machine learning to recover high fidelity amplitude and phase contrast images of a real sample hundreds of times faster than current ptychography reconstruction packages. Furthermore, by overcoming the constraints of iterative model-based methods, we can significantly relax sampling constraints on data acquisition while still producing an excellent image of the sample. Besides drastically accelerating acquisition and analysis, this capability has profound implications for the imaging of dose sensitive, dynamic, and extremely voluminous samples.},
 author = {Cherukara, Mathew J. and Zhou, Tao and Nashed, Youssef and Enfedaque, Pablo and Hexemer, Alex and Harder, Ross J. and Holt, Martin V.},
@@ -2015,18 +2025,7 @@ title = {{Three-dimensional imaging of dislocation propagation during crystal gr
 volume = {14},
 year = {2015}
 }
-@phdthesis{Girard2020,
-annote = {Difference map algo
-operator description
 
-support determination by other techniques such as SEM or AFM that give the knowledge of the shape and dimensions of the sample, or, in case of complete lack of information, one uses the autocorrelation function
-
-describes many algo},
-author = {Girard, Ga{\'{e}}tan},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Girard - 2020 - Development of Bragg coherent X-ray diffraction and Ptychography methods, application to the study of semiconductor nano.pdf:pdf},
-title = {{Development of Bragg coherent X-ray diffraction and Ptychography methods, application to the study of semiconductor nanostructures}},
-year = {2020}
-}
 @article{Reikowski2019,
 abstract = {In the search for precious-metal-free electrode materials for electrochemical water splitting, transition-metal oxides have been receiving much recent interest as active and stable electrocatalysts for the anodic oxygen evolution reaction (OER). We present operando surface X-ray diffraction studies of two structurally well-defined epitaxial cobalt oxide thin films: Co3O4(111) and CoOOH(001) electrodeposited on Au(111). The potential-dependent structural changes during cyclic voltammograms were monitored with high time resolution up to OER current densities as high as 150 mA cm-2. The CoOOH(001) film is found to be smooth and perfectly stable over a wide potential range. In the case of Co3O4(111), fast and fully reversible structural changes are observed. Specifically, the surface region of Co3O4(111) starts restructuring at potentials 300 mV negative of the onset of the OER, indicating that the process is related to the thermodynamically predicted Co3O4/CoOOH(001) transition rather than to the catalytic reaction. The formed skin layer is of defined thickness, which changes linearly with applied potential, and is the OER active phase. Surprisingly, the catalytic activity of the skin layer covered Co3O4 film and that of the smooth CoOOH(001) are almost identical, if the true microscopic surface area is taken into account. This indicates that the number of OER active sites on the two oxides is similar, despite the very different defect density, and is at variance with previous suggestions that di-$\mu$-oxo bridged Co cations are exclusively responsible for the OER activity of Co oxides. For the smooth CoOOH(001), a turnover frequency of 4.2 s-1 per surface atom is determined at an overpotential of 400 mV. Furthermore, our studies demonstrate that the pseudocapacitive charging current in the pre-OER potential range must be assigned to a bulk process that is accompanied by potential-dependent changes of the unit cell volume in the Co3O4 bulk.},
 author = {Reikowski, Finn and Maroun, Fouad and Pacheco, Ivan and Wiegmann, Tim and Allongue, Philippe and Stettner, Jochim and Magnussen, Olaf M.},
@@ -2197,22 +2196,54 @@ title = {{Bragg Coherent Diffraction Imaging for in Situ Studies in Electrocatal
 volume = {15},
 year = {2021}
 }
-@article{Grothausmann2015,
-author = {Grothausmann, Roman},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Grothausmann - 2015 - Facet Analyser ParaView plugin for automated facet detection and measurement of interplanar angles of tomographic.pdf:pdf},
-number = {March},
-title = {{Facet Analyser : ParaView plugin for automated facet detection and measurement of interplanar angles of tomographic objects}},
-year = {2015}
+
+
+@article{Fish1995,
+author = {D. A. Fish and A. M. Brinicombe and E. R. Pike and J. G. Walker},
+journal = {J. Opt. Soc. Am. A},
+keywords = {Algorithms; Blind deconvolution; Phase retrieval; Point spread function; Positron emission tomography; Space telescopes},
+number = {1},
+pages = {58--65},
+publisher = {Optica Publishing Group},
+title = {Blind deconvolution by means of the Richardson--Lucy algorithm},
+volume = {12},
+month = {01},
+year = {1995},
+doi = {10.1364/JOSAA.12.000058},
+abstract = {A blind deconvolution algorithm based on the Richardson--Lucy deconvolution algorithm is presented. Its performance in the presence of noise is found to be superior to that of other blind deconvolution algorithms. Results are presented and compared with results obtained from implementation of a Weiner filter blind deconvolution algorithm. The algorithm is developed further to incorporate functional forms of the point-spread function with unknown parameters. In the presence of noise the point-spread function can be evaluated with 1.0\% error, and the object can be reconstructed with a quality near that of the deconvolution process with a known point-spread function.},
 }
+
+@article{Richardson1972,
+author = {William Hadley Richardson},
+journal = {J. Opt. Soc. Am.},
+keywords = {Arrays; Deconvolution; Image processing; Point spread function},
+number = {1},
+pages = {55--59},
+publisher = {Optica Publishing Group},
+title = {Bayesian-Based Iterative Method of Image Restoration$\ast$},
+volume = {62},
+month = {01},
+year = {1972},
+doi = {10.1364/JOSA.62.000055},
+abstract = {An iterative method of restoring degraded images was developed by treating images, point spread functions, and degraded images as probability-frequency functions and by applying Bayes's theorem. The method functions effectively in the presence of noise and is adaptable to computer operation.},
+}
+
+@ARTICLE{LucyAlgo1974,
+       author = {{Lucy}, L.B.},
+        title = "{An iterative technique for the rectification of observed distributions}",
+      journal = {Astronomical Journal},
+         year = 1974,
+        month = 06,
+       volume = {79},
+        pages = {745},
+          doi = {10.1086/111605},
+}
+
 @article{Luke2005,
 abstract = {We report on progress in algorithms for iterative phase retrieval. The theory of convex optimization is used to develop and to gain insight into counterparts for the nonconvex problem of phase retrieval. We propose a relaxation of averaged alternating reflectors and determine the fixed-point set of the related operator in the convex case. A numerical study supports our theoretical observations and demonstrates the effectiveness of the algorithm compared to the current state of the art.},
 annote = {We report on progress in algorithms for iterative phase retrieval.},
-archivePrefix = {arXiv},
-arxivId = {math/0405208},
 author = {Luke, D. Russell},
 doi = {10.1088/0266-5611/21/1/004},
-eprint = {0405208},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Luke - 2005 - Relaxed averaged alternating reflections for diffraction imaging.pdf:pdf},
 issn = {02665611},
 journal = {Inverse Problems},
 number = {1},
@@ -2357,15 +2388,8 @@ pages = {1--16},
 title = {{Unsupervised representation learning with deep convolutional generative adversarial networks}},
 year = {2016}
 }
-@article{Mehl1943,
-author = {Sayre, D},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Sayre - 1952 - Some implication of a theorem due to Shannon.pdf:pdf},
-journal = {Acta Cryst.},
-pages = {843--843},
-title = {{Some implication of a theorem due to Shannon}},
-volume = {5},
-year = {1952}
-}
+
+
 @article{Vendelbo2014,
 abstract = {Many catalytic reactions under fixed conditions exhibit oscillatory behaviour. The oscillations are often attributed to dynamic changes in the catalyst surface. So far, however, such relationships were difficult to determine for catalysts consisting of supported nanoparticles. Here, we employ a nanoreactor to study the oscillatory CO oxidation catalysed by Pt nanoparticles using time-resolved high-resolution transmission electron microscopy, mass spectrometry and calorimetry. The observations reveal that periodic changes in the CO oxidation are synchronous with a periodic refacetting of the Pt nanoparticles. The oscillatory reaction is modelled using density functional theory and mass transport calculations, considering the CO adsorption energy and the oxidation rate as site-dependent. We find that to successfully explain the oscillations, the model must contain the phenomenon of refacetting. The nanoreactor approach can thus provide atomic-scale information that is specific to surface sites. This will improve the understanding of dynamic properties in catalysis and related fields. {\textcopyright} 2014 Macmillan Publishers Limited.},
 author = {Vendelbo, S. B. and Elkj{\ae}r, C. F. and Falsig, H. and Puspitasari, I. and Dona, P. and Mele, L. and Morana, B. and Nelissen, B. J. and {Van Rijn}, R. and Creemer, J. F. and Kooyman, P. J. and Helveg, S.},
@@ -2803,7 +2827,6 @@ issue  ="36",
 pages  ="6239-6244",
 publisher  ="The Royal Society of Chemistry",
 doi  ="10.1039/D1CE00736J",
-url  ="http://dx.doi.org/10.1039/D1CE00736J",
 abstract  ="Defects in strongly correlated materials such as V2O3 play influential roles on their electrical properties. Understanding the defects{'} structure is of paramount importance. In this project{,} we investigate defect structures in V2O3 grown via a flux method. We use AFM to see surface features in several large flake-like particles that exhibit characteristics of spiral growth. We also use Bragg coherent diffractive imaging (BCDI) to probe in 3 dimensions a smaller particle without flake-like morphology and note an absence of the pure screw dislocation characteristic of spiral growth. We identified and measured several defects by comparing the observed local displacement of the crystal{,} measured via BCDI to well-known models of the displacement around defects in the crystal. We identified two partial dislocations in the crystal. We discuss how defects of different types influence the morphology of V2O3 crystals grown via a flux method."
 }
 
@@ -3411,9 +3434,8 @@ year = "2007",
 volume = "40",
 number = "6",
 pages = "1174--1178",
-month = "Dec",
+month = "12",
 doi = {10.1107/S0021889807045086},
-url = {https://doi.org/10.1107/S0021889807045086},
 abstract = {{\it GenX} is a versatile program using the differential evolution algorithm for fitting X-ray and neutron reflectivity data. It utilizes the Parratt recursion formula for simulating specular reflectivity. The program is easily extensible, allowing users to incorporate their own models into the program. This can be useful for fitting data from other scattering experiments, or for any other minimization problem which has a large number of input parameters and/or contains many local minima, where the differential evolution algorithm is suitable. In addition, {\it GenX} manages to fit an arbitrary number of data sets simultaneously. The program is released under the GNU General Public License.},
 keywords = {X-ray reflectivity, neutron reflectivity, differential evolution algorithm, genetic algorithm},
 }
@@ -3427,9 +3449,8 @@ year = "2022",
 volume = "55",
 number = "4",
 pages = "1063--1071",
-month = "Aug",
+month = "08",
 doi = {10.1107/S1600576722006653},
-url = {https://doi.org/10.1107/S1600576722006653},
 abstract = {Since its publication more than 15 years ago the {\it GenX} software has been continuously developed and has established itself as a standard package for analyzing X-ray and neutron reflectometry data. The evolution of the software during the last two major revisions is reported here. This includes a simplified model builder for beginners, simple samples, additional sample models, statistical error analysis and the use of just-in-time compilation modules for the reflectometry kernel to achieve higher performance. In addition, the influence of experimental errors on the reflectivity curve is discussed, and new features are described that allow the user to include these in the error statistics to improve the fitting and uncertainty estimation.},
 keywords = {reflectometry, surface X-ray diffraction, neutron analysis, X-ray analysis},
 }
@@ -3982,7 +4003,7 @@ was also approached.},
 }
 
 
-@article{Grothausmann_Beare2015,
+@article{GrothausmannBeare2015,
    author = "R. Grothausmann and R. Beare",
    title = "Facet Analyser: ParaView plugin for automated facet detection and measurement of interplanar angles of tomographic objects",
    year = 2015,
@@ -4244,21 +4265,6 @@ Palladium–silicon (Pd–Si) is a model system for investigating stress develop
    file = {APS Snapshot:/Users/marieingridrichard/Zotero/storage/JTGNRZS5/e053850.html:text/html}
 }
 
-@article{marchesini_publishers_2007,
-   title = {Publisher's {Note}: “{Invited} {Article}: {A} unified evaluation of iterative projection algorithms for phase retrieval” [{Rev}. {Sci}. {Instrum}. 78, 011301 (2007)]},
-   volume = {78},
-   issn = {00346748},
-   shorttitle = {Publisher's {Note}},
-   doi = {10.1063/1.2736942},
-   number = {4},
-   urldate = {2013-10-15},
-   journal = {Review of Scientific Instruments},
-   author = {Marchesini, S.},
-   year = {2007},
-   pages = {049901},
-   file = {Marchesini - 2007 - Publisher's Note “Invited Article A unified eval.pdf:/Users/marieingridrichard/Zotero/storage/J9PUHBSA/Marchesini - 2007 - Publisher's Note “Invited Article A unified eval.pdf:application/pdf;Scitation\: Publisher's Note\: “Invited Article\: A unified evaluation of iterative projection algorithms for phase retrieval” [Rev. Sci. Instrum. 78, 011301 (2007)]:/Users/marieingridrichard/Zotero/storage/INFUMBCG/1.html:text/html}
-}
-
 @article{fienup_phase_1982,
    title = {Phase {Retrieval} {Algorithms} - a {Comparison}},
    volume = {21},
@@ -4294,6 +4300,18 @@ Palladium–silicon (Pd–Si) is a model system for investigating stress develop
    volume = {23},
    year = {1962},
 }
+
+@ARTICLE{Shannon1949,
+  author={Shannon, C.E.},
+  journal={Proceedings of the IRE},
+  title={Communication in the Presence of Noise},
+  year={1949},
+  volume={37},
+  number={1},
+  pages={10-21},
+  doi={10.1109/JRPROC.1949.232969}
+}
+
 
 @article{sayre_implications_1952,
    title = {Some implications of a theorem due to {Shannon}},
@@ -5824,11 +5842,9 @@ The high temperature stability of thin film Pd2Si is controlled by time- tempera
 
 @article{yang_iterative_2011,
    title = {Iterative algorithms for ptychographic phase retrieval},
-   urldate = {2013-11-22},
    journal = {arXiv preprint arXiv:1105.5628},
    author = {Yang, Chao and Qian, Jianliang and Schirotzek, Andre and Maia, Filipe and Marchesini, Stefano},
    year = {2011},
-   file = {1105.5628.pdf:/Users/marieingridrichard/Zotero/storage/E8M8E5IW/1105.5628.pdf:application/pdf}
 }
 
 @article{galanakis_broken-bond_2002,
@@ -6147,7 +6163,7 @@ year = {2019}
 }
 
 
-@article{default_1925,
+@article{Taylor1925,
 author = {Taylor, Hugh Stott  and Armstrong, Edward Frankland },
 title = {A theory of the catalytic surface},
 journal = {Proceedings of the Royal Society of London. Series A, Containing Papers of a Mathematical and Physical Character},
@@ -6156,10 +6172,6 @@ number = {745},
 pages = {105-111},
 year = {1925},
 doi = {10.1098/rspa.1925.0061},
-
-eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rspa.1925.0061}
-,
-    abstract = { The problem of the mechanism of a catalytic action occurring at the surface of a solid catalyst can be studied in several ways. Kinetic studies of such reactions supply important information with regard to the manner by which the process is achieved. On the other hand, attention may be focussed, not on the reactions which occur at the catalyst surface, but on the properties of the surface itself, and, from the results of such studies, generalizations may be made with respect to a variety of reactions which occur at such a surface. It is this latter method of attack on the problem of contact catalysis which has been adopted in the last few years in a comprehensive series of investigations on the properties of solid catalytic surfaces conducted in Princeton by the author and his co-workers. Taken in conjunction with the results of other investigators in the field of reaction kinetics, these studies have led to a concept of the catalytic surface which is, perhaps, more comprehensive than earlier efforts and which leads to interesting general conclusions with reference to matter in the solid state. The theory of Bodenstein and Fink, based on kinetic studies, assumed that reaction velocity was determined by the rate of diffusion of reactant gases through a layer of gas adsorbed on the catalyst surface. More recent studies, especially those of Langmuir, have led to the conclusion that multi-molecular layers of gas do not occur on plane surfaces of an adsorbent. Langmuir’s view is that the surface of a catalyst is to be regarded as an area containing a definite number of elementary spaces in which some of the spaces are vacant, while others are covered with adsorbed atoms or molecules. The activity of the surface is conditioned by the nature of the arrangement, and the spacing of the atoms, in the surface layer. The velocity of reaction on such surfaces depends on the fraction of such surface which is covered by adsorbed substances. Langmuir developed two cases in detail, one in which the surface was relatively bare, the other in which the surface was nearly completely covered with adsorbed gases. }
 }
 
 
@@ -6246,6 +6258,12 @@ keywords = {coherent X-ray imaging, ptychography, coherent diffraction imaging, 
    month = 09,
    year = {2017},
    pages = {13--18},
+}
+
+@thesis{Girard2020,
+   author = {Gaétan Girard},
+   title = {Development of Bragg coherent X-ray diffraction and Ptychography methods, application to the study of semiconductor nanostructures},
+   year = {2020},
 }
 
 @article{labat_inversion_2015,
@@ -7673,7 +7691,6 @@ doi = {10.1107/S0907444900008970},
 file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Miao, Kirz, Sayre - 2000 - The oversampling phasing method.pdf:pdf},
 issn = {09074449},
 journal = {Acta Crystallographica Section D: Biological Crystallography},
-mendeley-groups = {PHD/Literature Phase Retrieval},
 number = {10},
 pages = {1312--1315},
 pmid = {10998627},
@@ -7744,7 +7761,6 @@ year = {2000}
    doi = {10.1088/0266-5611/21/1/004},
    language = {en},
    number = {1},
-   urldate = {2019-02-08},
    journal = {Inverse Problems},
    author = {Luke, D. Russell},
    month = 11,
@@ -7796,13 +7812,11 @@ year = {2000}
    abstract = {Phase retrieval, the problem of recovering lost phase information from measured intensity alone, is an inverse problem that is widely faced in various imaging modalities ranging from astronomy to nanoscale imaging. The current process of phase recovery is iterative in nature. As a result, the image formation is time consuming and computationally expensive, precluding real-time imaging. Here, we use 3D nanoscale X-ray imaging as a representative example to develop a deep learning model to address this phase retrieval problem. We introduce 3D-CDINN, a deep convolutional neural network and differential programing framework trained to predict 3D structure and strain, solely from input 3D X-ray coherent scattering data. Our networks are designed to be “physics-aware” in multiple aspects; in that the physics of the X-ray scattering process is explicitly enforced in the training of the network, and the training data are drawn from atomistic simulations that are representative of the physics of the material. We further reﬁne the neural network prediction through a physics-based optimization procedure to enable maximum accuracy at lowest computational cost. 3D-CDI-NN can invert a 3D coherent diffraction pattern to real-space structure and strain hundreds of times faster than traditional iterative phase retrieval methods. Our integrated machine learning and differential programing solution to the phase retrieval problem is broadly applicable across inverse problems in other application areas.},
    language = {en},
    number = {2},
-   urldate = {2021-05-21},
    journal = {Applied Physics Reviews},
    author = {Chan, Henry and Nashed, Youssef S. G. and Kandel, Saugat and Hruszkewycz, Stephan O. and Sankaranarayanan, Subramanian K. R. S. and Harder, Ross J. and Cherukara, Mathew J.},
    month = 06,
    year = {2021},
    pages = {021407},
-   file = {Chan et al. - 2021 - Rapid 3D nanoscale coherent imaging via physics-aw.pdf:/Users/marieingridrichard/Zotero/storage/NL3ZZSTQ/Chan et al. - 2021 - Rapid 3D nanoscale coherent imaging via physics-aw.pdf:application/pdf},
 }
 
 
@@ -7813,7 +7827,6 @@ year = {2000}
    abstract = {We present a digital method for solving the phase-retrieval problem of optical-coherence theory: the reconstruction of a general object from the modulus of its Fourier transform. This technique should be useful for obtaining high-resolution imagery from interferometer data.},
    language = {EN},
    number = {1},
-   urldate = {2019-02-08},
    journal = {Optics Letters},
    author = {Fienup, J. R.},
    month = 07,
@@ -7821,22 +7834,6 @@ year = {2000}
    keywords = {Fourier transforms, Atmospheric turbulence, Brightness, Coherence theory, Large telescopes, Spatial frequency},
    pages = {27--29}
 }
-
-@article{marchesini_x-ray_2003,
-   title = {X-ray image reconstruction from a diffraction pattern alone},
-   volume = {68},
-   doi = {10.1103/PhysRevB.68.140101},
-   abstract = {A solution to the inversion problem of scattering would offer aberration-free diffraction-limited three-dimensional images without the resolution and depth-of-field limitations of lens-based tomographic systems. Powerful algorithms are increasingly being used to act as lenses to form such images. Current image reconstruction methods, however, require the knowledge of the shape of the object and the low spatial frequencies unavoidably lost in experiments. Diffractive imaging has thus previously been used to increase the resolution of images obtained by other means. Here we experimentally demonstrate an inversion method, which reconstructs the image of the object without the need for any such prior knowledge.},
-   number = {14},
-   urldate = {2019-02-08},
-   journal = {Physical Review B},
-   author = {Marchesini, S. and He, H. and Chapman, H. N. and Hau-Riege, S. P. and Noy, A. and Howells, M. R. and Weierstall, U. and Spence, J. C. H.},
-   month = 10,
-   year = {2003},
-   pages = {140101},
-   file = {APS Snapshot:/Users/marieingridrichard/Zotero/storage/QK7J6Q2X/PhysRevB.68.html:text/html;Submitted Version:/Users/marieingridrichard/Zotero/storage/VCGVYK8J/Marchesini et al. - 2003 - X-ray image reconstruction from a diffraction patt.pdf:application/pdf}
-}
-
 
 @article{hofmann_glancing-incidence_2018,
    title = {Glancing-incidence focussed ion beam milling: {A} coherent {X}-ray diffraction study of 3D nano-scale lattice strains and crystal defects},
