--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -39,13 +39,13 @@ In this example, the surface reconstructions can be described by the (2, 4) matr
     \label{fig:CTRConvolution}
 \end{figure}
 
-We have shown in sec. \ref{sec:LatticeFactor} that the Lattice factor is equivalent to the Fourier transform of the crystal shape.
+It was shown in sec. \ref{sec:LatticeFactor} that the Lattice factor is equivalent to the Fourier transform of the crystal shape.
 For infinitely large crystals, the lattice factor converges towards a three dimensional Dirac peak.
 When working with large single crystals for surface x-ray diffraction, the samples are considered to be infinitely large in the $\vec{a}, \vec{b}$ directions and \textit{semi-infinitely} large in the $\vec{c}$ direction, creating an infinitely large flat surface.
 In the real space, this can be mathematically described by the multiplication of the crystal lattice and a step-function as illustrated in fig. \ref{fig:CTRConvolution}.
 The convolution theorem states that the Fourier transform of the multiplication of two functions is the convolution of their Fourier transforms, the Fourier transform of the crystal lattice is the Lattice factor when the Fourier transform of the step function is the inverse function $\frac{1}{q_z}$ \parencite{Andrews1985, Robinson1986}, which gives rise to a so called "rod" of intensity along the direction perpendicular to the truncated surface, a \textit{crystal truncation rod}.
 
-We define $A(\vec{q})$ as the scattering amplitude of an infinite 2D layer of atoms, the scattering amplitude for a semi infinite stack of those layers in the $\vec{c}$ direction can be written as (adapted from eq. \ref{eq:LatFactor}):
+$A(\vec{q})$ is defined as the scattering amplitude of an infinite 2D layer of atoms, the scattering amplitude for a semi infinite stack of those layers in the $\vec{c}$ direction can be written as (adapted from eq. \ref{eq:LatFactor}):
 
 \begin{equation}
     \label{eq:CTR1}
@@ -53,7 +53,8 @@ We define $A(\vec{q})$ as the scattering amplitude of an infinite 2D layer of at
 \end{equation}
 
 $\beta_{abs}$ is the absorption parameter.
-The intensity around a Bragg peak can then be written as a function of $q_z$, \textit{i.e.} the deviation from the Laue condition in $\vec{c}$. We have $q = q_z + 2\pi l/|\vec{c}|$, $l$ is the Miller indice of the nearest Bragg peak.
+The intensity around a Bragg peak can then be written as a function of $q_z$, \textit{i.e.} the deviation from the Laue condition in $\vec{c}$.
+$q = q_z + 2\pi l/|\vec{c}|$, $l$ is the Miller indice of the nearest Bragg peak.
 
 \begin{equation}
     \label{eq:CTR2}
@@ -142,7 +143,7 @@ Furthermore, if for low $l$ values the detector is in the vertical plane, for hi
 These experimental limitations are at the origin of how far in $l$ the CTR can be measured, details about the experimental limitations and corrections factor for the measurement of crystal truncation rods can be found in \cite{Vlieg1997, Drnec2014}.
 High-energy surface x-ray diffraction \parencite{Gustafson2014, Harlow2020, Hejral2021} has the potential to counter that limitation since the radius of the Ewald sphere increases, which simplifies the experimental setup.
 
-We can express the integrated intensity of a Bragg peak in photons/second for a perfectly collimated monochromatic beam from a small single crystal of $N$ unit cells, neglecting absorption effects, as follows \parencite{NielsenMcMorrow}:
+The integrated intensity of a Bragg peak in photons/second for a perfectly collimated monochromatic beam from a small single crystal of $N$ unit cells, neglecting absorption effects, can be expressed as follows \parencite{NielsenMcMorrow}:
 
 \begin{gather}
     \label{eq:ScatteredIntensity}
@@ -161,21 +162,23 @@ Moreover, in the case of crystals that are larger than the beam, illumination ef
 
 \subsection{X-ray reflectometry}\label{sec:XRR}
 
-To perform a measurement perpendicular to the $[0, 0]$ node, $\mu$ must be tuned together with the out-of-plane angle of the detector $\delta$ keeping the relation $\delta=2\mu$.
-This kind of measurement is called "specular" measurement for which the direction of the scattering vector is only perpendicular to the surface.
+To perform a measurement perpendicular to the $[0, 0]$ node in the horizontal geometry, $\beta$ must be tuned together with the in-plane angle of the detector $\delta$ (fig. \ref{fig:EwaldSphereSpecular}).
+This kind of measurement is called \textit{specular} measurement, for which the direction of the scattering vector is only perpendicular to the surface, and yields information about the density of the material in the direction perpendicular to the surface.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[trim=75 100 75 100, clip, width=0.49\textwidth]{Figures/introduction/EwaldSphereSpecular3D.pdf}
     \caption{
     Ewald sphere represented together with the reciprocal lattice before (green) and after (blue) rotating the sample to satify the Laue condition.
-    The node of the reciprocal lattice that satisfies the Laue condition is in red.
-    For simplicity, only part of the reciprocal lattice is represented.
-    (a) In-plane measurement ([h, k, l] = [0, 1, 0]), the sample is rotated in-plane by an angle $\omega$.
-    The detector must be at an in-plane angle $\gamma=2\omega$ to detect the scattered x-rays.
-    (b) Out-of-plane measurement for crystal truncation rods, the sample is rotated in-plane by an angle $\omega$ so that the (0, 1, L) CTR is measured \textit{while} keeping the incident angle at low values.
-    Here the [0, 1, 1] node is on the Ewald sphere, both detector angles must be rotated to be have the detector in the direction of the scattered x-rays.
-    Only the (0, 1, L) CTR is represented for simplicity.
+    Measurement along the (0, 0, L) direction is performed by simulatenously rotating the inplane sample angle $\beta$ while the rotation of the in-plane detector angle $\delta$ follows the relation $\delta=2\beta$.
     }
     \label{fig:EwaldSphereSpecular}
 \end{figure}
+
+A description of the theory behind X-ray reflectometry which stems from deriving the interaction betwenn the incident, reflected, and transmitted plane waves at each interface can be found in several textbooks \parencite{Willmott}.
+To resume, the measured intensity $R$ is equal to the square of the reflectivity amplitude $R=|r|^2$.
+After the critical angle $\alpha_c$ (sec. \ref{sec:RefractionReflectionAbsorption}), the intensity decreases as a function of the inverse fourth power of the incident angle, and is proportionnal to the square of the electronic density.
+A rough surface will lead to an additionnal exponential decrease in the intensity after the critical angle when the formation of a new layer will lead to interferences between the waves reflected on both surfaces which will result in the so called \textit{Kiessig} fringes, of width proportionnal to the thickness of the new layer.
+
+Information about the formation of new surface layers as well as the roughness and thickness of each layer can be extracted by fitting a model to the scattered intensity.
+The technique can easily be used together with surface x-ray diffraction since it does not require a change of instrumental setup, and brings complementary information about the average roughness and thickness of surface layers.
